# ostrich

./: CHANGELOG.md  README.md  pyproject.toml
src/ostrich/: __init__.py  constants.py  core.py  excuses.py
tests/: test_ostrich.py
